[gd_scene load_steps=2 format=3 uid="uid://bdvj5xutbxjv8"]

[ext_resource type="Script" path="res://ui/home_ui.gd" id="1_du4ur"]

[node name="HomeUI" type="CanvasLayer"]
script = ExtResource("1_du4ur")

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.5
offset_top = 41.0
offset_right = 138.5
offset_bottom = 82.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "A Point and click adventure game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -52.0
offset_right = 101.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="Credits" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 54.0
offset_right = 103.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Credits"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 159.0
offset_right = 104.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
